feat: Tradução parcial do backend e correção de testes
Realiza a tradução parcial dos pacotes `processo` e `subprocesso`, incluindo a renomeação de Services, Repositories, Controllers e Events para o português.

- Renomeia `ProcessoService` para `ServicoProcesso` e `ProcessoController` para `ProcessoControlador`.
- Renomeia `SubprocessoService` para `ServicoSubprocesso` e `SubprocessoController` para `SubprocessoControlador`.
- Renomeia `AtividadeRepository` para `RepositorioAtividade`.
- Renomeia as interfaces de serviço do pacote `mapa`.
- Corrige uma grande quantidade de erros de compilação em cascata nos testes e no código de produção que surgiram dessas renomeações.

O build está atualmente quebrado com erros de compilação restantes. Um arquivo `problemas.md` foi criado para documentar o estado atual e os próximos passos recomendados.